Add more bcalls.
Signed-off-by: Conrad Meyer <konrad@tylerc.org>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,7 @@
-all: libti83p.o
+all: ti83p.lib
 
-libti83p.o:
-	../pctools/tisdcc -t ti83p -D TI83P -I `pwd`/../include/ -c -o libti83p.o libti.c
+ti83p.lib: ti83p_bcalls.o
+	../pctools/tisdcc -t ti83p $* -o ti83p.lib
+
+ti83p_bcalls.o: bcalls.c
+	../pctools/tisdcc -t ti83p -D TI83P -I `pwd`/../include/ -c -o ti83p_bcalls.o bcalls.c
