Add support for creating library files.
Signed-off-by: Conrad Meyer <konrad@tylerc.org>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,7 +1,7 @@
 all: ti83p.lib
 
 ti83p.lib: ti83p_bcalls.o
-	../pctools/tisdcc -t ti83p $* -o ti83p.lib
+	../pctools/tisdcc -t ti83p ti83p_bcalls.o -o ti83p.lib
 
 ti83p_bcalls.o: bcalls.c
 	../pctools/tisdcc -t ti83p -D TI83P -I `pwd`/../include/ -c -o ti83p_bcalls.o bcalls.c
